# blog

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  pyproject.toml  requirements.txt
blog/: __init__.py  server.py
ci/: deploy.sh  kill.sh  test.sh
templates/: index.html
tests/: context.py  test_basic.py
