[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blog"
authors = [
  { name="Martin Hanekom", email="martin.b.hanekom@gmail.com" },
]
description = "Personal coding blog"
version = "0.0.1"
dependencies = [
  "pre-commit==2.20.0",
  "pytest==7.1.3",
  "pytest-asyncio==0.19.0",
  "sanic==22.9.0",
  "sanic-testing==22.9.0",
  'importlib-metadata; python_version<"3.10"',
]
