[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blog"
authors = [
  { name="Martin Hanekom", email="martin.b.hanekom@gmail.com" },
]
description = "Personal coding blog"
version = "0.0.1"
dependencies = [
  'importlib-metadata; python_version<"3.10"',
]
